--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
