--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project is a conversational analytics agent that allows users to query their gaming data using natural language. It leverages Google Cloud's Vertex AI and Looker to provide insights, data tables, and visualizations.",
   "main": "get_insights.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bash ./dev.sh"
   },
   "repository": {
     "type": "git",
